<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.TrainingsplanView">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/trainingsplan"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="20dp"
            android:text="@string/set"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/setCountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="20dp"
            android:text="@string/repetition"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/repCountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="20dp"
            android:text="@string/level"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/levelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/level"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textview7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/weekly_plan"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/day1Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_blue"
            android:text="@string/day1" />

        <Button
            android:id="@+id/day2Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_blue"
            android:text="@string/day2" />

        <Button
            android:id="@+id/day3Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_blue"
            android:text="@string/day3" />

        <Button
            android:id="@+id/day4Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_blue"
            android:text="@string/day4" />

        <Button
            android:id="@+id/day5Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_blue"
            android:text="@string/day5" />

        <Button
            android:id="@+id/day6Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_blue"
            android:text="@string/day6" />

        <Button
            android:id="@+id/day7Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_blue"
            android:text="@string/day7" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/day1Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

<!--        <TextView-->
<!--            android:id="@+id/day1TV"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center_vertical"-->
<!--            android:paddingBottom="10dp"-->
<!--            android:text="@string/day1"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold" />-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp" />
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:id="@+id/day2Layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="10dp">-->

<!--        <TextView-->
<!--            android:id="@+id/day2TV"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center_vertical"-->
<!--            android:paddingBottom="10dp"-->
<!--            android:text="@string/day2"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold" />-->

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/recyclerView2"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:padding="5dp" />-->
<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:id="@+id/day3Layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="10dp">-->

<!--        <TextView-->
<!--            android:id="@+id/day3TV"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center_vertical"-->
<!--            android:paddingBottom="10dp"-->
<!--            android:text="@string/day2"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold" />-->

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/recyclerView3"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:padding="5dp" />-->
<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:id="@+id/day4Layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="10dp">-->

<!--        <TextView-->
<!--            android:id="@+id/day4V"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center_vertical"-->
<!--            android:paddingBottom="10dp"-->
<!--            android:text="@string/day2"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold" />-->

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/recyclerView4"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:padding="5dp" />-->
<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:id="@+id/day5Layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="10dp">-->

<!--        <TextView-->
<!--            android:id="@+id/day5TV"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center_vertical"-->
<!--            android:paddingBottom="10dp"-->
<!--            android:text="@string/day2"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold" />-->

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/recyclerView5"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:padding="5dp" />-->
<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:id="@+id/day6Layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="10dp">-->

<!--        <TextView-->
<!--            android:id="@+id/day6TV"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center_vertical"-->
<!--            android:paddingBottom="10dp"-->
<!--            android:text="@string/day2"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold" />-->

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/recyclerView6"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:padding="5dp" />-->
<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:id="@+id/day7Layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="10dp">-->

<!--        <TextView-->
<!--            android:id="@+id/day7TV"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center_vertical"-->
<!--            android:paddingBottom="10dp"-->
<!--            android:text="@string/day2"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold" />-->

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/recyclerView7"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:padding="5dp" />-->
<!--    </LinearLayout>-->

</LinearLayout>
