<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/voiceFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.VoiceView">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="866dp"
        android:scaleType="centerCrop"
        android:src="@drawable/training_background_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/coach_greeting"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coachImage" />

    <ImageButton
        android:id="@+id/voiceButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="135dp"
        android:layout_height="122dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/voice"
        android:scaleType="centerCrop"
        android:src="@mipmap/microphone_circle_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <TextView
        android:id="@+id/voiceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speak_with_me"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/voiceButton" />

    <ImageView
        android:id="@+id/coachImage"
        android:layout_width="195dp"
        android:layout_height="158dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/coach_greeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coach_icon_3"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>